# stochastic-assembly

./: .gitignore  README.md  index.3ee855f9.css  index.3ee855f9.css.map  index.5f46c46f.js  index.d318e497.css  index.d318e497.css.map  index.html  index.runtime.4708e483.js  index.runtime.4708e483.js.map
cpp/: CMakeLists.txt  README.md
cpp/src/: CMakeLists.txt  CubeInstance.cpp  CubeInstance.h  CubeType.cpp  CubeType.h  Effect.cpp  Effect.h  Face.cpp  Face.h  Move.cpp  Patch.cpp  Polycube.cpp  Polycube.h  PolycubesAssemblyGraph.cpp  PolycubesAssemblyGraph.h  PolycubesProgram.cpp  PolycubesProgram.h  PolycubesSimulation.cpp  PolycubesSimulation.h  SimulationMove.cpp  SimulationMove.h  SolveSpec.cpp  SolveSpec.h  utils.cpp  utils.h  workspace
cpp/src/pythonBinding/: CMakeLists.txt  polycubesPython.cpp
web/: README.md  package-lock.json  package.json  tsconfig.json
web/src/: edit.html  evolve.html  gallery.html  index.html  klossar.html  random.html  solve.html  view.html  vr.html
web/src/css/: style.css  toggle_switch.css
web/src/ts/: analysis.ts  edit.ts  evolve.ts  index.ts  init.ts  libs.ts  move.ts  patchEdit.ts  patchySimFiles.ts  polycubeSystem.ts  random.ts  rule.ts  simplifyWorker.ts  utils.ts  view.ts  vr.ts
web/src/ts/libs/: seedrandom.js  three.min.js
web/src/ts/libs/geometries/: ConvexGeometry.js
web/src/ts/solve/: polycubeSolver.ts  solve.ts  solveSpec.ts  solveWorker.ts
